--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "langchain>=0.3.27",
     "langchain-openai>=0.3.35",
     "openai>=2.14.0",
     "pydantic>=2.12.5",
