--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "langchain>=0.3.27",
+    "langchain-experimental>=0.3.4",
     "langchain-openai>=0.3.35",
     "openai>=2.14.0",
     "pydantic>=2.12.5",
