--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "langchain-experimental>=0.3.4",
     "langchain-mcp-adapters==0.1.0",
     "langchain-openai>=0.3.35,<0.4.0",
+    "langgraph>=0.2.28",
     "openai>=2.14.0",
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
