--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "langchain-mcp-adapters==0.1.0",
     "langchain-openai>=0.3.35,<0.4.0",
     "langgraph>=0.2.28",
+    "langgraph-checkpoint-mongodb>=0.2.2",
+    "langgraph-checkpoint-redis>=0.3.3",
     "openai>=2.14.0",
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
